# APiBankDio

./: README.md  apibank.db  pyproject.toml
migrations/: env.py
migrations/versions/: 6c5a01b58d40_banco_inicial.py
src/: db.py  main.py  security.py
src/Schemas/: s_auth.py  s_ccr.py  s_clientes.py  s_mcc.py  s_usuarios.py
src/controllers/: auth.py  ccr.py  cliente.py  movimento.py  usuario.py
src/dbmodels/: ccr.py  clientes.py  mcc.py  usuarios.py
src/views/: v_auth.py  v_ccr.py  v_clientes.py  v_mcc.py  v_usuarios.py
